--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -2,10 +2,26 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="http://neo4j-contrib.github.io/developer-resources/language-guides/assets/css/main.css">
+
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Neo4j Movies</title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!-- <link data-require="toastr@1.3.0" data-semver="1.3.0" rel="stylesheet" href="//www.johnpapa.net/scripts/toastr.min.css" /> -->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script data-require="knockout@2.3.0" data-semver="2.3.0" src="http://knockoutjs.com/downloads/knockout-2.3.0.js"></script>
+    <!-- <script data-require="toastr@1.3.0" data-semver="1.3.0" src="//www.johnpapa.net/scripts/toastr.min.js"></script> -->
+    <!-- <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script> -->
+    <script src="http://d3js.org/d3.v3.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="neo4j-web.min.js"></script>
+    <!-- <script type="text/javascript" src="/toast.js"></script> -->
 </head>
 
 <body>
+<div class = "containter">
 <div id="graph">
 </div>
 <div role="navigation" class="navbar navbar-default navbar-static-top">
@@ -15,10 +31,13 @@
                 <ul class="nav navbar-nav">
                     <li>
                         <form role="search" class="navbar-form" id="search">
+                            <!-- <label>Movies:</label> -->
                             <div class="form-group">
-                                <input type="text" value="Matrix" placeholder="Search for Movie Title" class="form-control" name="search">
+                                <input type="text" value="" placeholder="Search for Movie Title" class="form-control" name="search">
                             </div>
+                            <div id='buttons'>
                             <button class="btn btn-default" type="submit">Search</button>
+                            </div>
                         </form>
                     </li>
                 </ul>
@@ -47,6 +66,9 @@
                     <th>Movie</th>
                     <th>Released</th>
                     <th>Tagline</th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
                 </tr>
                 </thead>
                 <tbody>
@@ -70,16 +92,89 @@
         </div>
     </div>
 </div>
+
+<!-- Modal -->
+<div class="modal fade" id="updateModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Movie</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <label>Title</label> <input disabled id="movieTitleInput" type=text value="" placeholder="Title of the Movie" class="form-control" name="title" data-bind="value: title" > </br>
+          <label>Released</label> <input type=number value="" placeholder="Release year of the Movie" class="form-control" name="released" data-bind="value: released" > </br>
+          <label>Tagline</label> <input type=text value="" placeholder="Tagline" class="form-control" name="tagline" data-bind="value: tagline" > </br>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" id="SaveButton" data-dismiss="modal">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- MODAL 2-->
+
+<div class="modal fade" id="createModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Movie</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <label>Title</label> <input id="movieTitleInput" type=text value="" placeholder="Title of the Movie" class="form-control" name="title" data-bind="value: title" > </br>
+          <label>Released</label> <input type=number value="" placeholder="Release year of the Movie" class="form-control" name="released" data-bind="value: released" > </br>
+          <label>Tagline</label> <input type=text value="" placeholder="Tagline" class="form-control" name="tagline" data-bind="value: tagline" > </br>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" id="SaveCreateButton" data-dismiss="modal">Save Movie</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!-- MODAL 3-->
+
+<div class="modal fade" id="dialogModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Dialog</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p  id="messageModal"></p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+</div>
+
 <style type="text/css">
     .node { stroke: #222; stroke-width: 1.5px; }
     .node.actor { fill: #888; }
     .node.movie { fill: #BBB; }
     .link { stroke: #999; stroke-opacity: .6; stroke-width: 1px; }
+    #buttons {display: inline-flex;}
 </style>
-
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-<script src="http://d3js.org/d3.v3.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="neo4j-web.min.js"></script></body>
 
 </body>
 </html>
