--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="http://neo4j-contrib.github.io/developer-resources/language-guides/assets/css/main.css">
+    <link rel="stylesheet" href="https://neo4j-contrib.github.io/developer-resources/language-guides/assets/css/main.css">
 
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -12,8 +12,8 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script data-require="knockout@2.3.0" data-semver="2.3.0" src="http://knockoutjs.com/downloads/knockout-2.3.0.js"></script>
-    <script src="http://d3js.org/d3.v3.min.js" type="text/javascript"></script>
+    <script data-require="knockout@2.3.0" data-semver="2.3.0" src="https://knockoutjs.com/downloads/knockout-2.3.0.js"></script>
+    <script src="https://d3js.org/d3.v3.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="neo4j-web.min.js"></script>
 </head>
 
@@ -40,8 +40,8 @@
             </div>
             <div class="navbar-header col-sm-6 col-md-6">
                 <div class="logo-well">
-                    <a href="http://neo4j.com/developer-resources">
-                    <img src="http://neo4j-contrib.github.io/developer-resources/language-guides/assets/img/logo-white.svg" alt="Neo4j World's Leading Graph Database" id="logo">
+                    <a href="https://neo4j.com/developer-resources">
+                    <img src="https://neo4j-contrib.github.io/developer-resources/language-guides/assets/img/logo-white.svg" alt="Neo4j World's Leading Graph Database" id="logo">
                     </a>
                 </div>
                 <div class="navbar-brand">
