--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -13,7 +13,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script data-require="knockout@2.3.0" data-semver="2.3.0" src="https://knockoutjs.com/downloads/knockout-2.3.0.js"></script>
     <script src="https://d3js.org/d3.v3.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="neo4j-web.min.js"></script>
+    <!-- lokalishoz -->
+    <!-- <script type="text/javascript" src="neo4j-web.min.js"></script> -->
+
+    <script type="text/javascript" src="bundle.js"></script>
 </head>
 
 <body>
