--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -8,15 +8,6 @@
     <title>Neo4j Movies</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script data-require="knockout@2.3.0" data-semver="2.3.0" src="https://knockoutjs.com/downloads/knockout-2.3.0.js"></script>
-    <script src="https://d3js.org/d3.v3.min.js" type="text/javascript"></script>
-    <!-- lokalishoz -->
-    <!-- <script type="text/javascript" src="neo4j-web.min.js"></script> -->
-
-    <script type="text/javascript" src="bundle.js"></script>
 </head>
 
 <body>
@@ -190,5 +181,15 @@
     }
 </style>
 
+
+<!-- scripts -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script data-require="knockout@2.3.0" data-semver="2.3.0" src="https://knockoutjs.com/downloads/knockout-2.3.0.js"></script>
+<script src="https://d3js.org/d3.v3.min.js" type="text/javascript"></script>
+<!-- lokalishoz -->
+<!-- <script type="text/javascript" src="neo4j-web.min.js"></script> -->
+
+<script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
